Check in working Configuration and Logger with Logger in main code working

--- a/TestMapX/myconfig.cfg
+++ b/TestMapX/myconfig.cfg
@@ -8,3 +8,7 @@ dataPassword=MAPX_DEV
 nearestNeighborFudge=0.001
 xZones=4
 yZones=4
+# Logging information
+SOLUTION_NAME=TestMapX
+OUTPUT_TYPE=CONSOLE
+LogLevel=1
