* Configuration.cs: Changed get to not throw exception when key not   found, but to return null
* Logger.cs: Changed Write statement to include the level when it
  writes to the log file or console

* Program.cs: Set watch.Stop correctly to get timing

* TestMapX.csproj:

--- a/TestMapX/TestMapX.csproj
+++ b/TestMapX/TestMapX.csproj
@@ -5,4 +5,23 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Configuration.cs~" />
+    <None Remove="ConfigurationBuilder.cs~" />
+    <None Remove="ConsoleLogger.cs~" />
+    <None Remove="Cell.cs~" />
+    <None Remove="blocks.txt~" />
+    <None Remove="Block.cs~" />
+    <None Remove="CurrentCodeRevision.cs~" />
+    <None Remove="FileLogger.cs~" />
+    <None Remove="ILogger.cs~" />
+    <None Remove="Logger.cs~" />
+    <None Remove="myconfig.cfg~" />
+    <None Remove="myconfig.txt~" />
+    <None Remove="Point.cs~" />
+    <None Remove="Program.cs~" />
+    <None Remove="Segment.cs~" />
+    <None Remove="segments.txt~" />
+    <None Remove="SystemCommands.cs~" />
+  </ItemGroup>
 </Project>
