Added ability for Configuration to read entries with comments after the values

--- a/TestMapX/myconfig.cfg
+++ b/TestMapX/myconfig.cfg
@@ -5,7 +5,7 @@ dataSource=ORCL
 dataServer=10.3.0.5
 dataUser=MAPX_DEV
 dataPassword=MAPX_DEV
-nearestNeighborFudge=0.001
+nearestNeighborFudge=0.001 # This is how close a neighbor can be to be consider the same
 xZones=4
 yZones=4
 # Logging information
